--- a/package.json
+++ b/package.json
@@ -8,40 +8,65 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@codsod/react-native-otp-input": "^1.0.7",
+    "@expo-google-fonts/inter": "^0.4.2",
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "axios": "^1.12.2",
     "expo": "~54.0.8",
+    "expo-application": "^7.0.7",
+    "expo-blur": "^15.0.7",
+    "expo-build-properties": "^1.0.8",
     "expo-constants": "~18.0.9",
+    "expo-device": "^8.0.7",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
     "expo-linking": "~8.0.8",
+    "expo-local-authentication": "^17.0.7",
+    "expo-location": "^19.0.7",
+    "expo-modules-core": "^3.0.16",
+    "expo-network": "^8.0.7",
     "expo-router": "~6.0.6",
+    "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
+    "patch-package": "^8.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-alert-notification": "^0.4.2",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "1.20.1",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~4.1.0",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0"
+    "react-native-select-dropdown": "^4.0.1",
+    "react-native-size-matters": "^0.4.2",
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1",
+    "rn-swipe-button": "^3.0.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0"
+    "eslint-config-expo": "~10.0.0",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
