--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "attendance",
+  "name": "eAttendance",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
     "postinstall": "patch-package"
@@ -26,7 +26,8 @@
     "expo-blur": "^15.0.7",
     "expo-build-properties": "^1.0.8",
     "expo-constants": "~18.0.9",
-    "expo-device": "^8.0.7",
+    "expo-dev-client": "~6.0.12",
+    "expo-device": "~8.0.7",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
@@ -35,6 +36,7 @@
     "expo-location": "^19.0.7",
     "expo-modules-core": "^3.0.16",
     "expo-network": "^8.0.7",
+    "expo-notifications": "~0.32.11",
     "expo-router": "~6.0.6",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -50,6 +52,7 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-keyboard-controller": "1.18.5",
     "react-native-maps": "1.20.1",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~4.1.0",
